# RippleFX-Engine

./: .gitignore  CMakeLists.txt  LICENSE  README.md
docs/: STRUCTURE.md
include/Core/Effects/: IEffect.h  RippleEffect.h
include/Core/Keyboard/: Key.h  KeyCodes.h  Keyboard.h
include/Core/Lighting/: EffectPool.h  LightingManager.h
include/Core/Util/: Color.h  Position.h
include/Hardware/: IHardware.h  LogitechLed.h  Simulator.h
src/: main.cpp  main.ino
src/Core/Effects/: RippleEffect.cpp
src/Core/Keyboard/: Key.cpp  Keyboard.cpp
src/Core/Lighting/: EffectPool.cpp  LightingManager.cpp
src/Hardware/: LogitechLed.cpp  Simulator.cpp
